--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         And Receive Your Immediate Access To My Free Telegram Group
                     </span>
                 </p>
-                <a href="https://t.me/+1NqjZW_gMgozZDE1" class="btn btn-primary" target="_blank"
+                <a href="https://t.me/+aPtgDHk6gm1mN2U1" class="btn btn-primary" target="_blank"
                     rel="noopener noreferrer">
                     <i class="fa-brands fa-telegram"></i> Join Now
                 </a>
